// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update adds TODO for [items] (no v5 equivalent): test.html 1`] = `
{
  "0. Before": "
                <tui-input-date
                    formControlName="date"
                    [items]="namedDays"
                >
                    Date
                </tui-input-date>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input-date migration (see https://taiga-ui.dev/components/input-date):
     - [items]: TuiNamedDay type is removed in v5. Use <datalist> + <section *tuiDropdown>
       for named dates. See example: https://taiga-ui.dev/components/input-date#datalist -->
<tui-textfield
                    
                    
                >
<label tuiLabel>
                    Date
                </label>

<input tuiInputDate formControlName="date" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputDateModule to TuiInputDate: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date></tui-input-date>

                <tui-input-date
                    [formControl]="control"
                    [tuiTextfieldCleaner]="true"
                >
                    Choose a date
                    <input tuiTextfieldLegacy />
                </tui-input-date>

                <tui-input-date formControlName="date">Pick date</tui-input-date>

                <tui-input-date [(ngModel)]="value">Date</tui-input-date>
            ",
  "1. After": "
                <tui-textfield>
<input tuiInputDate />
<tui-calendar *tuiDropdown />
</tui-textfield>

                <tui-textfield
                    
                    [tuiTextfieldCleaner]="true"
                >
<label tuiLabel>
                    Choose a date
                    </label>
<input tuiInputDate [formControl]="control" />
                
<tui-calendar *tuiDropdown />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>Pick date</label>

<input tuiInputDate formControlName="date" />
<tui-calendar *tuiDropdown />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>Date</label>

<input tuiInputDate [(ngModel)]="value" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputDateModule to TuiInputDate: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputDateModule} from '@taiga-ui/legacy';

                @Component({
                  standalone: true,
                  imports: [TuiInputDateModule],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
  "1. After": "import { TuiInputDate } from "@taiga-ui/kit";

                                @Component({
                  standalone: true,
                  imports: [TuiInputDate],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
}
`;

exports[`ng-update moves [disabledItemHandler] and [markerHandler] to <tui-calendar *tuiDropdown>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date
                    formControlName="date"
                    [disabledItemHandler]="disabledHandler"
                    [markerHandler]="markerHandler"
                >
                    Date
                </tui-input-date>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    
                >
<label tuiLabel>
                    Date
                </label>

<input tuiInputDate formControlName="date" />
<tui-calendar *tuiDropdown [disabledItemHandler]="disabledHandler" [markerHandler]="markerHandler" />
</tui-textfield>
            ",
}
`;

exports[`ng-update moves [min] and [max] to <input tuiInputDate>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date
                    formControlName="date"
                    [max]="maxDate"
                    [min]="minDate"
                >
                    Date
                </tui-input-date>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    
                >
<label tuiLabel>
                    Date
                </label>

<input tuiInputDate formControlName="date" [max]="maxDate" [min]="minDate" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update renames [defaultActiveYearMonth] to [month] on <tui-calendar *tuiDropdown>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date
                    formControlName="date"
                    [defaultActiveYearMonth]="initialMonth"
                >
                    Date
                </tui-input-date>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<label tuiLabel>
                    Date
                </label>

<input tuiInputDate formControlName="date" />
<tui-calendar *tuiDropdown [month]="initialMonth" />
</tui-textfield>
            ",
}
`;
